add/edit/ project | data table | modal

--- a/client/src/app/components/contact-made/contact-made.component.html
+++ b/client/src/app/components/contact-made/contact-made.component.html
@@ -1,1 +1,19 @@
-<app-project></app-project>
+<!-- <app-project></app-project> -->
+<!-- <div class="bounds">
+    <div class="content"
+      fxLayout="row"
+      fxLayout.xs="column"
+      fxFlexFill
+      fxLayoutAlign="start"
+      > -->
+
+      <!-- <div fxFlex="33" class="sec1" fxFlex.xs="55" >
+
+      </div> -->
+      <!-- <div fxFlex="65" class="sec2" fxFlex="65"> -->
+        <!-- <app-project></app-project> -->
+        <app-project-table></app-project-table>
+        <!-- <router-outlet></router-outlet> -->
+      <!-- </div> -->
+    <!-- </div>
+  </div> -->
