--- a/client/src/app/components/contact-made/project/project.component.html
+++ b/client/src/app/components/contact-made/project/project.component.html
@@ -1,10 +1,16 @@
 <div class="project">
+  <div class="project-head">
+    <h3>Create project</h3>
+    <span class="close_dialog" (click)="onClose()"><i class="fas fa-times"></i></span>
+  </div>
+  <mat-divider></mat-divider>
   <form [formGroup]="projectForm" (ngSubmit)="onSave()">
     <div class="wrapper-columns">
       <div class="left">
           <div class="field">
               <mat-form-field class="mat-form-field-style">
                 <mat-select placeholder="client" formControlName="client">
+                    <mat-option [value]="null">empty</mat-option>
                     <mat-option *ngFor="let client of dataForSelect?.clients" [value]="client?._id">
                         {{client?.name + ' ' + client?.last_name}}
                     </mat-option>
@@ -15,8 +21,9 @@
           <div class="field">
               <mat-form-field class="mat-form-field-style">
                 <mat-select placeholder="employee" formControlName="employee">
+                    <mat-option [value]="null">empty</mat-option>
                     <mat-option *ngFor="let employee of dataForSelect?.employees" [value]="employee._id">
-                        {{employee.name + ' ' + employee?.last_name}}
+                        {{employee?.name + ' ' + employee?.last_name}}
                     </mat-option>
                 </mat-select>
               </mat-form-field>
@@ -24,9 +31,9 @@
 
           <div class="field">
               <mat-form-field class="mat-form-field-style">
-                <mat-select placeholder="platform" formControlName="platform">
+                <mat-select placeholder="platform" formControlName="platform" required>
                     <mat-option *ngFor="let platform of dataForSelect?.platforms" [value]="platform._id">
-                        {{platform.name}}
+                        {{platform?.name}}
                     </mat-option>
                 </mat-select>
               </mat-form-field>
@@ -66,13 +73,13 @@
               <mat-slide-toggle
                 formControlName="enable"
                 (change)="onChangeNotification($event.checked)">
-                <span *ngIf="onOff; else elseBlock">on</span>
-                <ng-template #elseBlock>off</ng-template>
+                <span *ngIf="onOff; else elseBlock"><i class="off-icon fas fa-bell-slash"></i></span>
+                <ng-template #elseBlock><i class="fas fa-bell"></i></ng-template>
               </mat-slide-toggle>
           </div>
 
           <div class="field">
-              <mat-form-field class="mat-form-field-style" *ngIf="!onOff">
+              <mat-form-field class="mat-form-field-style">
                   <mat-select placeholder="type" formControlName="type" required>
                       <mat-option *ngFor="let type of dataForSelect?.not_types" [value]="type._id">
                           {{type.name}}
@@ -89,9 +96,9 @@
 
                 <h5>when to remind?</h5>
                 <mat-form-field>
-                    <input matInput [matDatepicker]="dp1" placeholder="choose a date" class="choose-date" formControlName="date" required>
-                    <mat-datepicker-toggle matSuffix [for]="dp1"></mat-datepicker-toggle>
-                    <mat-datepicker #dp1></mat-datepicker>
+                    <input matInput [matDatepicker]="dp3" placeholder="choose a date" class="choose-date" formControlName="date" required>
+                    <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
+                    <mat-datepicker #dp3 disabled="false"></mat-datepicker>
                   </mat-form-field><br>
 
                 <div class="time">
