front main component

--- a/client/src/app/components/contact-made/contact-made.component.html
+++ b/client/src/app/components/contact-made/contact-made.component.html
@@ -1,19 +1,17 @@
-<!-- <app-project></app-project> -->
-<!-- <div class="bounds">
-    <div class="content"
-      fxLayout="row"
-      fxLayout.xs="column"
-      fxFlexFill
-      fxLayoutAlign="start"
-      > -->
+<div class="bounds">
+  <div class="content"
+    fxLayout="row"
+    fxLayout.xs="column"
+    fxFlexFill
+    fxLayoutAlign="start"
+    >
 
-      <!-- <div fxFlex="33" class="sec1" fxFlex.xs="55" >
+    <!-- <div fxFlex="10" class="sec1" fxFlex.xs="10" >
 
-      </div> -->
-      <!-- <div fxFlex="65" class="sec2" fxFlex="65"> -->
-        <!-- <app-project></app-project> -->
-        <app-project-table></app-project-table>
-        <!-- <router-outlet></router-outlet> -->
-      <!-- </div> -->
-    <!-- </div>
-  </div> -->
+    </div> -->
+    <div fxFlex="100" class="sec2">
+      <app-project-table></app-project-table>
+    </div>
+  </div>
+</div>
+
