--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row class="header wrapper">
     <div class="left-panel">
-      <a mat-button routerLink="/"><img src="assets/img/logo.png" alt="" class="logo"></a>
+      <a mat-button routerLink="/" class="logo"><img src="assets/img/logo.png" alt=""></a>
       <a
         *ngFor="let link of links" mat-button
         [routerLink]="link.link" routerLinkActive="active"
